--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.3.0
 backcall==0.1.0
 certifi==2019.9.11
 colorama==0.4.1
+cycler==0.10.0
 decorator==4.4.0
 ipykernel==5.1.2
 ipython==7.8.0
@@ -11,19 +12,26 @@ jedi==0.15.1
 joblib==0.13.2
 jupyter-client==5.3.3
 jupyter-core==4.5.0
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
+matplotlib==3.1.1
 mccabe==0.6.1
+mkl-fft==1.0.14
+mkl-random==1.1.0
+mkl-service==2.3.0
+numpy==1.16.5
 parso==0.5.1
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
 Pygments==2.4.2
 pylint==2.4.1
+pyparsing==2.4.2
 pyprof2calltree==1.4.4
 python-dateutil==2.8.0
+pytz==2019.2
 pyzmq==18.1.0
 six==1.12.0
 tornado==6.0.3
 traitlets==4.3.2
 wcwidth==0.1.7
-wincertstore==0.2
 wrapt==1.11.2
